# ChangeLog for app-text/xdvipdfmx
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/xdvipdfmx/ChangeLog,v 1.29 2009/03/20 13:30:42 jmbsvicetto Exp $

  20 Mar 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml:
  Removing joslwah as a maintainer since he was retired.

  04 Sep 2008; Christian Faulhammer <opfer@gentoo.org>
  -xdvipdfmx-0.3.ebuild:
  clean up

  12 May 2008; nixnut <nixnut@gentoo.org> xdvipdfmx-0.4.ebuild:
  Stable on ppc wrt bug 220651

  16 Apr 2008; Peter Volkov <pva@gentoo.org> xdvipdfmx-0.4.ebuild:
  amd64 stable, bug #215735.

  08 Apr 2008; Raúl Porcel <armin76@gentoo.org> xdvipdfmx-0.4.ebuild:
  alpha/ia64/sparc stable wrt #215735

  01 Apr 2008; Christian Faulhammer <opfer@gentoo.org> xdvipdfmx-0.4.ebuild:
  stable x86, bug 215735

  10 Feb 2008; Alexis Ballier <aballier@gentoo.org> xdvipdfmx-0.4.ebuild:
  keyword ~x86-fbsd

  19 Dec 2007; Jeroen Roovers <jer@gentoo.org> xdvipdfmx-0.4.ebuild:
  Stable for HPPA too. Fixed installing COPYING.

  01 Dec 2007; Markus Rothe <corsair@gentoo.org> xdvipdfmx-0.4.ebuild:
  Stable on ppc64

  19 Nov 2007; Ferris McCormick <fmccor@gentoo.org> xdvipdfmx-0.4.ebuild:
  Sparc stable.  30 days w/o any bugs, needed for xetex (bug #185358).

  25 Oct 2007; Raúl Porcel <armin76@gentoo.org> xdvipdfmx-0.4.ebuild:
  Add ~alpha/~ia64 wrt #195815

*xdvipdfmx-0.4 (15 Oct 2007)

  15 Oct 2007; Alexis Ballier <aballier@gentoo.org>
  +files/xdvipdfmx-0.4-ft2-internals.patch, +xdvipdfmx-0.4.ebuild:
  version bump, plus backport a patch from upstream to avoid segfaults with
  recents freetype-2, bug #185358

  20 May 2007; Christian Faulhammer <opfer@gentoo.org> xdvipdfmx-0.3.ebuild:
  stable amd64, bug 176895

  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  xdvipdfmx-0.3.ebuild:
  ppc stable, bug #176895

  03 May 2007; Raúl Porcel <armin76@gentoo.org> xdvipdfmx-0.3.ebuild:
  ia64 + x86 stable wrt bug 176895
