@@ -1,5 +1,5 @@
 AUX xdvipdfmx-0.4-ft2-internals.patch 1889 RMD160 747b1c8e5064420a67822394859bc940999eaca6 SHA1 c41eef49d5b0b1dd3c687a215c854f43318a4644 SHA256 9cb35f585ad90df15931e13c546df1d86ce6f0da89be149aad7da4adcb23a138
 DIST xdvipdfmx-0.4.tar.gz 1193326 RMD160 93a442abd84eb9913c3801652c72e355609383c6 SHA1 882e3bca93cb85c724e31120228f4413a36b321a SHA256 8b81986489e8dba5931b99e467775a103ea4dfcceebc77964d21f12edb0026cf
-EBUILD xdvipdfmx-0.4.ebuild 1343 RMD160 afa3fb0fe6809c891da53a56c50024aecf9f50a0 SHA1 4115ecb239d158cf9fcaa72335787a2d51fd9493 SHA256 c1b68343ad0b3d6a410666300912ba8c2e3bd5fc86c563f05aa3eb8ea6eca265
-MISC ChangeLog 3422 RMD160 6331d78cc19da8ea41e0e7f4775c10d10d0ba033 SHA1 df942988a4d6becee407db18abe56f461ecffcc7 SHA256 caf8f64a0f332a20d363cc629cc054db7bb0763d98325fa2d4b66917f727fff7
+EBUILD xdvipdfmx-0.4.ebuild 1349 RMD160 0b21b034c7badbd5d8616fd9afb766a23c3f5d20 SHA1 f2d8c117e9f6db3af6b4109229636337941ed9c4 SHA256 10af2d21bff233b4e9251122ac5a26283dde11606cf413278c4af54f85c68c35
+MISC ChangeLog 3562 RMD160 41e5d4a8aa4ef62067f09ae610b6d5cd4d4c219c SHA1 db42c0819164455c78c13a6ffc620d2e742308ed SHA256 5f75e8fc42881722836a052e8f60ff4c99feda98b12527c5beff836b428a6242
 MISC metadata.xml 317 RMD160 b4189793f52055900979101c6787541dfa2d5d58 SHA1 acab1d9bb6796ea1fe01847ea921ef5e76470582 SHA256 d0fadefcf888514160af23abf8e8615f9612d3c7053b9366ea0d4db4776f11c7
