@@ -1,6 +1,9 @@
 # ChangeLog for app-text/xdvipdfmx
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/xdvipdfmx/ChangeLog,v 1.29 2009/03/20 13:30:42 jmbsvicetto Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/xdvipdfmx/ChangeLog,v 1.30 2010/06/12 16:20:21 aballier Exp $
+
+  12 Jun 2010; Alexis Ballier <aballier@gentoo.org> xdvipdfmx-0.4.ebuild:
+  fix description, by Nick Bowler <nbowler@draconx.ca>, bug #304049
 
   20 Mar 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
   metadata.xml:
